--- a/index.html
+++ b/index.html
@@ -7,33 +7,15 @@
     <link rel="stylesheet" href="my_style.css">
 </head>
 <body>
-<div class="wrapper">
-  <div class="box a">Player</div>
-  <div class="box b">Position</div>
-  <div class="box c">Goals</div>
-  <div class="box d">Tier</div>
-
-  <!-- Table Row -->
-  <div class="row">
-    <div class="box d">short data</div>
-    <div class="box e">a really long piece of data</div>
-    <div class="box f">short data</div>
-  </div>
-
-  <!-- Table Row -->
-  <div class="row">
-    <div class="box d">short data</div>
-    <div class="box e">a really long piece of data</div>
-    <div class="box f">short data</div>
-  </div>
-</div>
-
-<div>
-    <div>
-        <h2>Basic HTML Table</h2>
-        <table style="width:100%">
+<div class="container">
+    <div class="intro">
+        The Header
+    </div>
+    <div class="players">
+        <h2>Players Table</h2>
+        <table>
             <tr>
-                <th class="item">Player</th>
+                <th>Player</th>
                 <th>Position</th>
                 <th>Goals</th>
                 <th>Tier</th>
@@ -57,6 +39,9 @@
                 <td>1</td>
             </tr>
         </table>
+    </div>
+    <div class="tiers">
+        Tiers Counter
     </div>
 </div>
 
