--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <div class="players">
         <h2>Players Table</h2>
-        <table>
+        <table id="players">
             <tr>
                 <th>Player</th>
                 <th>Position</th>
@@ -41,9 +41,34 @@
         </table>
     </div>
     <div class="tiers">
-        Tiers Counter
+        <h2>Tiers Counter</h2>
+        <table id="tiers">
+            <tr>
+                <th></th>
+                <th>C</th>
+                <th>LW</th>
+                <th>RW</th>
+                <th>D</th>
+                <th>G</th>
+            </tr>
+            <tr>
+                <td>Tier 1</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td>Tier 2</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+            </tr>
+        </table>
     </div>
 </div>
-
 </body>
 </html>
